// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown in Dark Theme renders Default 1`] = `
<div
  className="w-56 h-80"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r15:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="p-2 cursor-pointer hover:text-piccolo"
          >
            Choose a name...
          </span>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders OptionsVariants 1`] = `
<div
  className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1d:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Sort by
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1f:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select language
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1h:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select countries
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders Select 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-14"
        id="headlessui-listbox-label-:r1j:"
        onClick={[Function]}
      >
        Small
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1k:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-8 p-3 rounded-moon-i-xs"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-14 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 13l-6 6-6-6"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:r1m:"
        onClick={[Function]}
      >
        Medium
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1n:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:r1p:"
        onClick={[Function]}
      >
        Large
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1q:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-12 py-3 px-4 rounded-moon-i-sm"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1s:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-14 py-2 px-4 rounded-moon-i-md"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <label
                  className="block text-moon-12 text-trunks"
                  id="headlessui-listbox-label-:r1t:"
                  onClick={[Function]}
                >
                  xLarge
                </label>
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders SelectStates 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:r1v:"
        onClick={[Function]}
      >
        Error
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r20:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus transition-shadow duration-200 focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-bulma"
                >
                  Devon Webb
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-chichi"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16 opacity-30 cursor-not-allowed"
        id="headlessui-listbox-label-:r22:"
        onClick={[Function]}
      >
        Disabled
      </label>
      <div>
        <div
          aria-haspopup={true}
          disabled={true}
          id="headlessui-listbox-button-:r23:"
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm opacity-30 cursor-not-allowed hover:shadow-input"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-bulma"
                >
                  Wade Cooper
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r25:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Without Label and Hint message
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:r27:"
        onClick={[Function]}
      >
        List options width
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r28:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Dark Theme renders TriggerElements 1`] = `
<div
  className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r17:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="w-10 h-10 bg-gohan rounded-moon-i-md flex align-middle justify-center items-center cursor-pointer transition-colors hover:bg-piccolo/20 "
          >
            <svg
              className="text-moon-24 text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r19:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Select name
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r1b:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 ps-3 pe-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select name
            <svg
              className="text-moon-24 text-trunks false"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in Light Theme renders Default 1`] = `
<div
  className="w-56 h-80"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r0:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <span
            className="p-2 cursor-pointer hover:text-piccolo"
          >
            Choose a name...
          </span>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in Light Theme renders OptionsVariants 1`] = `
<div
  className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r8:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Sort by
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:ra:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select language
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:rc:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select countries
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in Light Theme renders Select 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-14"
        id="headlessui-listbox-label-:re:"
        onClick={[Function]}
      >
        Small
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:rf:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-8 p-3 rounded-moon-i-xs"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-14 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M22 13l-6 6-6-6"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:rh:"
        onClick={[Function]}
      >
        Medium
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:ri:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:rk:"
        onClick={[Function]}
      >
        Large
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:rl:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-12 py-3 px-4 rounded-moon-i-sm"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:rn:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-14 py-2 px-4 rounded-moon-i-md"
              data-test="data-test"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <label
                  className="block text-moon-12 text-trunks"
                  id="headlessui-listbox-label-:ro:"
                  onClick={[Function]}
                >
                  xLarge
                </label>
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Light Theme renders SelectStates 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:rq:"
        onClick={[Function]}
      >
        Error
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:rr:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus transition-shadow duration-200 focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm shadow-input-err hover:shadow-input-err focus:shadow-input-err"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-bulma"
                >
                  Devon Webb
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-chichi"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16 opacity-30 cursor-not-allowed"
        id="headlessui-listbox-label-:rt:"
        onClick={[Function]}
      >
        Disabled
      </label>
      <div>
        <div
          aria-haspopup={true}
          disabled={true}
          id="headlessui-listbox-button-:ru:"
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm opacity-30 cursor-not-allowed hover:shadow-input"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-bulma"
                >
                  Wade Cooper
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r10:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Without Label and Hint message
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-bulma pb-2 text-moon-16"
        id="headlessui-listbox-label-:r12:"
        onClick={[Function]}
      >
        List options width
      </label>
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r13:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="relative"
          >
            <button
              className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
              open={false}
            >
              <span
                className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
              >
                <span
                  className="text-moon-16 text-trunks"
                >
                  Choose an option
                </span>
              </span>
              <span
                className="flex-shrink-0"
              >
                <svg
                  className="text-[1.5rem] text-trunks"
                  fill="none"
                  height="1em"
                  viewBox="0 0 32 32"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M25 11.5l-9 9-9-9"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
      <p
        className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`Dropdown in Light Theme renders TriggerElements 1`] = `
<div
  className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r2:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <div
            className="w-10 h-10 bg-gohan rounded-moon-i-md flex align-middle justify-center items-center cursor-pointer transition-colors hover:bg-piccolo/20 "
          >
            <svg
              className="text-moon-24 text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r4:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            type="button"
          >
            Select name
            <span
              aria-hidden="true"
              className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
            />
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <div>
        <div
          aria-expanded={false}
          aria-haspopup={true}
          disabled={false}
          id="headlessui-listbox-button-:r6:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
        >
          <button
            className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 ps-3 pe-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
          >
            Select name
            <svg
              className="text-moon-24 text-trunks false"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 13l-6 6-6-6"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="z-1000 absolute"
        style={
          Object {
            "left": "0",
            "position": "absolute",
            "top": "0",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <div
    className="w-56 h-80"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2a:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <span
              className="p-2 cursor-pointer hover:text-piccolo"
            >
              Choose a name...
            </span>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders OptionsVariants 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2i:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
            >
              Sort by
            </button>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2k:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
            >
              Select language
            </button>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2m:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 px-3 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
            >
              Select countries
            </button>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders Select 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-14"
          id="headlessui-listbox-label-:r2o:"
          onClick={[Function]}
        >
          Small
        </label>
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2p:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-8 p-3 rounded-moon-i-xs"
                data-test="data-test"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-14 text-trunks"
                  >
                    Choose an option
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M22 13l-6 6-6-6"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-16"
          id="headlessui-listbox-label-:r2r:"
          onClick={[Function]}
        >
          Medium
        </label>
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2s:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                data-test="data-test"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-trunks"
                  >
                    Choose an option
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-16"
          id="headlessui-listbox-label-:r2u:"
          onClick={[Function]}
        >
          Large
        </label>
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2v:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-12 py-3 px-4 rounded-moon-i-sm"
                data-test="data-test"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-trunks"
                  >
                    Choose an option
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r31:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-14 py-2 px-4 rounded-moon-i-md"
                data-test="data-test"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <label
                    className="block text-moon-12 text-trunks"
                    id="headlessui-listbox-label-:r32:"
                    onClick={[Function]}
                  >
                    xLarge
                  </label>
                  <span
                    className="text-moon-16 text-trunks"
                  >
                    Choose an option
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders SelectStates 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col lg:flex-row justify-around items-center w-full gap-2"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-16"
          id="headlessui-listbox-label-:r34:"
          onClick={[Function]}
        >
          Error
        </label>
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r35:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus transition-shadow duration-200 focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm shadow-input-err hover:shadow-input-err focus:shadow-input-err"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-bulma"
                  >
                    Devon Webb
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-chichi"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-16 opacity-30 cursor-not-allowed"
          id="headlessui-listbox-label-:r37:"
          onClick={[Function]}
        >
          Disabled
        </label>
        <div>
          <div
            aria-haspopup={true}
            disabled={true}
            id="headlessui-listbox-button-:r38:"
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm opacity-30 cursor-not-allowed hover:shadow-input"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-bulma"
                  >
                    Wade Cooper
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks opacity-30 cursor-not-allowed"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r3a:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-trunks"
                  >
                    Without Label and Hint message
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <label
          className="block text-bulma pb-2 text-moon-16"
          id="headlessui-listbox-label-:r3c:"
          onClick={[Function]}
        >
          List options width
        </label>
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r3d:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="relative"
            >
              <button
                className="flex items-center justify-between w-full bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200 focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 rounded-moon-i-sm"
                open={false}
              >
                <span
                  className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
                >
                  <span
                    className="text-moon-16 text-trunks"
                  >
                    Choose an option
                  </span>
                </span>
                <span
                  className="flex-shrink-0"
                >
                  <svg
                    className="text-[1.5rem] text-trunks"
                    fill="none"
                    height="1em"
                    viewBox="0 0 32 32"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M25 11.5l-9 9-9-9"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
        <p
          className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
          role="alert"
        >
          Informative message holder
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown in RTL renders TriggerElements 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col lg:flex-row align-middle justify-around items-center w-full gap-2"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2c:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <div
              className="w-10 h-10 bg-gohan rounded-moon-i-md flex align-middle justify-center items-center cursor-pointer transition-colors hover:bg-piccolo/20 "
            >
              <svg
                className="text-moon-24 text-trunks"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M25 11.5l-9 9-9-9"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2e:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="px-4 h-10 py-2 gap-2 text-moon-14 rounded-moon-i-sm relative z-0 flex justify-center items-center font-medium no-underline overflow-hidden whitespace-nowrap select-none transition duration-200 active:scale-90 btn-primary"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              Select name
              <span
                aria-hidden="true"
                className="z-[-1] block absolute inset-0 pointer-events-none transition-[background-color_0.2s_ease-in-out]"
              />
            </button>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <div>
          <div
            aria-expanded={false}
            aria-haspopup={true}
            disabled={false}
            id="headlessui-listbox-button-:r2g:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
          >
            <button
              className="z-0 overflow-hidden flex flex-row items-center text-moon-14 relative rounded-moon-i-sm cursor-pointer transition duration-200 space-between h-10 gap-2 py-2 ps-3 pe-2 bg-gohan text-bulma hover:bg-piccolo/[.12] hover:text-piccolo"
            >
              Select name
              <svg
                className="text-moon-24 text-trunks false"
                fill="none"
                height="1em"
                viewBox="0 0 32 32"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M22 13l-6 6-6-6"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          className="z-1000 absolute"
          style={
            Object {
              "left": "0",
              "position": "absolute",
              "top": "0",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
